--- a/counterfab/build.gradle
+++ b/counterfab/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
 android {
     compileSdkVersion project.ext.compileSdkVersion
@@ -28,3 +30,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
+
+apply from: 'https://raw.githubusercontent.com/andremion/JCenter/master/deploy.gradle'
