--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ allprojects {
         minSdkVersion = 16
         targetSdkVersion = 24
 
-        versionCode = 2
-        versionName = "1.0.0"
+        versionCode = 3
+        versionName = "1.0.1"
 
         supportLibraryVersion = '25.1.1'
 
@@ -35,6 +35,7 @@ allprojects {
 
         name = 'CounterFab'
         description = 'A FloatingActionButton subclass that shows a counter badge on right top corner'
+        url = 'https://play.google.com/store/apps/details?id=com.andremion.counterfab.sample'
 
         licenseName = 'The Apache Software License, Version 2.0'
         licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -44,9 +45,9 @@ allprojects {
         group = 'com.github.andremion'
         artifact = 'counterfab'
 
-        url = 'https://github.com/andremion/' + name
-        issueTracker = url + '/issues'
-        vcs = url + '.git'
+        gitUrl = 'https://github.com/andremion/' + name
+        vcsUrl = gitUrl + '.git'
+        issueTracker = gitUrl + '/issues'
 
         developerId = 'andremion'
         developerName = 'André Mion'
