--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,17 +124,19 @@ jobs:
         command: gcloud config set project counterfab-b6643
     - run:
         name: Authenticate with Google Cloud
-        command: gcloud auth activate-service-account firebase-adminsdk-9bs94@counterfab-b6643.iam.gserviceaccount.com \
+        command: >-
+        gcloud auth activate-service-account firebase-adminsdk-9bs94@counterfab-b6643.iam.gserviceaccount.com
         --key-file ${HOME}/client-secret.json
     - run:
         name: Run instrumented test on Firebase Test Lab
-        command: gcloud firebase test android run --no-auto-google-login \
-        --type instrumentation \
-        --app sample/build/outputs/apk/debug/sample-debug.apk \
-        --test sample/build/outputs/apk/androidTest/debug/sample-debug-androidTest.apk \
-        --device model=walleye,version=28,locale=en_US,orientation=portrait \
-        --environment-variables coverage=true,coverageFile=/sdcard/coverage.ec \
-        --directories-to-pull=/sdcard \
+        command: >-
+        gcloud firebase test android run --no-auto-google-login
+        --type instrumentation
+        --app sample/build/outputs/apk/debug/sample-debug.apk
+        --test sample/build/outputs/apk/androidTest/debug/sample-debug-androidTest.apk
+        --device model=walleye,version=28,locale=en_US,orientation=portrait
+        --environment-variables coverage=true,coverageFile=/sdcard/coverage.ec
+        --directories-to-pull=/sdcard
         --timeout 20m
     - run:
         name: Create directory to store test results
@@ -161,8 +163,9 @@ jobs:
       - *attach_firebase_workspace
       - run:
           name: Move Firebase screenshot resources
-          command: mkdir -p sample/screenshots && \
-          cp firebase/walleye-28-en_US-portrait/artifacts/sdcard/screenshots/com.andremion.counterfab.sample.test/* \
+          command: >-
+          mkdir -p sample/screenshots &&
+          cp firebase/walleye-28-en_US-portrait/artifacts/sdcard/screenshots/com.andremion.counterfab.sample.test/*
           sample/screenshots/
       - run:
           name: Generate JaCoCo report
