- Use environment variables to optimize build time - Set Shot library to only verifying screenshots, not run instrumentation tests

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ allprojects {
         developerId = 'andremion'
         developerName = 'André Mion'
         developerEmail = 'andremion@gmail.com'
+
+        ciBuild = System.getenv("CI") == "true"
+        // allows for -DpreDex=false to be set
+        preDexEnabled = System.getProperty("preDex", "true") == "true"
     }
 }
 
