--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        apply from: 'configuration/dependencies.gradle'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$compiling.kotlinVersion"
         classpath 'com.karumi:shot:2.2.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
 }
 
@@ -20,47 +22,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-    }
-    project.ext {
-
-        applicationId = "com.andremion.counterfab.sample"
-        compileSdkVersion = 28
-        minSdkVersion = 16
-        targetSdkVersion = 28
-
-        versionCode = 7
-        versionName = "1.2.1"
-
-        materialVersion = '1.0.0'
-
-        junitVersion = '4.12'
-        espressoCoreVersion = '3.1.1'
-        rulesVersion = '1.1.1'
-        screenshotTestingVersion = '0.8.0'
-
-        name = 'CounterFab'
-        description = 'A FloatingActionButton subclass that shows a counter badge on right top corner'
-        url = 'https://play.google.com/store/apps/details?id=com.andremion.counterfab.sample'
-
-        licenseName = 'The Apache Software License, Version 2.0'
-        licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-        allLicenses = ["Apache-2.0"]
-
-        bintrayRepo = 'github'
-        group = 'com.github.andremion'
-        artifact = 'counterfab'
-
-        gitUrl = 'https://github.com/andremion/' + name
-        vcsUrl = gitUrl + '.git'
-        issueTracker = gitUrl + '/issues'
-
-        developerId = 'andremion'
-        developerName = 'André Mion'
-        developerEmail = 'andremion@gmail.com'
-
-        ciBuild = System.getenv("CI") == "true"
-        // allows for -DpreDex=false to be set
-        preDexEnabled = System.getProperty("preDex", "true") == "true"
     }
 }
 
